Fixed layout on 16:9 and caching

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 /* Center content and limit width for ultra-wide screens */
 #root {
   min-height: 100vh;
+  min-width: 75vw;
+
   max-width: 85vw;
   margin: 0 auto;
   padding: 2rem;
